--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,8 +4,12 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
+one:
+ email: 'one@email.com'
+ encrypted_password: <%= Devise::Encryptor.digest(User, 'password') %>
 # column: value
 #
-two: {}
+two:
+  email: 'two@email.com'
+  encrypted_password: <%= Devise::Encryptor.digest(User, 'password') %>
 # column: value
